# moving_averages_backtesting

./: .gitignore  AAPL_OHLCV.csv  Dockerfile  IBM_OHLCV.csv  MSFT_OHLCV.csv  NVDA_OHLCV.csv  README.md  SPY_OHLCV.csv  environment.yml  fetch_data.py  pyproject.toml
configs/: settings.yaml  settings.yml
scripts/: compute_ma.py  create_sql_db.py  fetch_data.py  setup.py
sql/: create_indicators_table.sql  create_strategy_signals_table.sql
src/ma_backtesting/: __init__.py  io_utils.py
src/ma_backtesting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
